--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <img src="assets/images/head.png" alt="sign">
-        <h1><a href="index0.html">FUTURE TELLING</a></h1>
+        <h1><a href="index.html">FUTURE TELLING</a></h1>
     </div>
 
 
@@ -76,7 +76,7 @@
 
     <footer>
         <div class="footer-left">
-            <a href="index0.html">Back to Homepage</a>
+            <a href="index.html">Back to Homepage</a>
         </div>
         <div class="footer-right">
             <a href="page2.html">Continue to Education in Metaverse</a>
