--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <img src="assets/images/head.png" alt="sign">
-        <h1><a href="index0.html">FUTURE TELLING</a></h1>
+        <h1><a href="index.html">FUTURE TELLING</a></h1>
     </div>
 
     <div class="header2">
@@ -52,7 +52,7 @@
 
     <footer>
         <div class="footer-left">
-            <a href="index0.html">Back to Homepage</a>
+            <a href="index.html">Back to Homepage</a>
         </div>
         <div class="footer-right">
             <a href="page4.html">Continue to Entertainment in Metaverse</a>
