--- a/page4.html
+++ b/page4.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <img src="assets/images/head.png" alt="sign">
-        <h1><a href="index0.html">FUTURE TELLING</a></h1>
+        <h1><a href="index.html">FUTURE TELLING</a></h1>
     </div>
 
     <h1>Entertainment in Metaverse</h1>
@@ -106,7 +106,7 @@
 
     <footer>
         <div class="footer-left">
-            <a href="index0.html">Back to Homepage</a>
+            <a href="index.html">Back to Homepage</a>
         </div>
         
     </footer>
